--- a/3.2.3/Dockerfile.x86_64
+++ b/3.2.3/Dockerfile.x86_64
@@ -4,7 +4,7 @@ ARG HRLD_VERSION=3.2.3
 ARG USER=haroldcoin
 
 RUN useradd -r $USER \
-  && echo "deb http://deb.debian.org/debian/ stretch main contrib non-free" | tee -a /etc/apt/sources.list
+  && echo "deb http://deb.debian.org/debian/ stretch main contrib non-free" | tee -a /etc/apt/sources.list \
   && apt-get update -y \
   && apt-get install -y git curl gnupg unzip wget build-essential libtool autotools-dev autoconf pkg-config automake libboost-filesystem1.67-dev libboost-system1.67-dev libboost-program-options1.67-dev libboost-thread1.67-dev libevent-2.1 libevent-pthreads-2.1-6 libminiupnpc-dev libssl1.0-dev bsdmainutils joe zip libdb5.3-dev libdb5.3++-dev \
   && apt-get clean \
