--- a/3.2.3/Dockerfile.x86_64
+++ b/3.2.3/Dockerfile.x86_64
@@ -21,7 +21,7 @@ RUN mkdir haroldcoin-$HRLD_VERSION \
   && cp -R . /usr/local/bin/ \
   && cd ~ \
   && rm -rf /tmp/haroldcoin-$HRLD_VERSION \
-  && rm /tmp/haroldcoin-armhf.tar.gz
+  && rm /tmp/haroldcoin-x86_64.tar.gz
 
 RUN git clone https://github.com/ncopa/su-exec.git \
     && cd su-exec && make && cp su-exec /usr/local/bin/ \
